Correction of default converters config and documentation

--- a/config/config.php.dist
+++ b/config/config.php.dist
@@ -24,7 +24,10 @@ return [
 
             // Coverter strategies
             'converters' => [
-                'MyConverter' => My\Converter\ClassName::class
+                'Json' => [
+                    My\Event\ClassName::class => My\Converter\ClassName::class
+                ]
+
             ],
 
             // Event color configuration
