--- a/composer.json
+++ b/composer.json
@@ -13,16 +13,23 @@
             "Elchristo\\Calendar\\": "src/"
         }
     },
+    "autoload-dev": {
+        "psr-4": {
+            "Elchristo\\Calendar\\Test\\": "tests/"
+        }
+    },
     "require": {
         "php": "^5.5 || ^7.0",
         "zendframework/zend-stdlib": "^2.4 || ^3.1",
+        "zendframework/zend-hydrator": "^2.2",
         "container-interop/container-interop": "^1.0",
         "sandrokeil/interop-config": "^1.0"
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
     "require-dev": {
-        "fzaninotto/faker": "^1.6"
+        "fzaninotto/faker": "^1.6",
+        "codeception/codeception": "^2.2"
     },
     "license": "MIT"
 }
