--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,7 @@
     "prefer-stable": true,
     "require-dev": {
         "fzaninotto/faker": "^1.6",
+        "phpunit/phpunit": "^5.7",
         "codeception/codeception": "^2.2"
     },
     "license": "MIT"
