--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     ],
     "autoload": {
         "psr-4": {
-            "Elchristo\\Calendar\\": "src/"
+            "Elchristo\\Calendar\\": "src/Elchristo/Calendar/"
         }
     },
     "autoload-dev": {
