--- a/composer.json
+++ b/composer.json
@@ -19,18 +19,18 @@
         }
     },
     "require": {
-        "php": "^5.6 || ^7.0",
+        "php": "^7.0",
         "zendframework/zend-stdlib": "^2.4 || ^3.1",
         "zendframework/zend-hydrator": "^2.2",
-        "container-interop/container-interop": "^1.0",
-        "sandrokeil/interop-config": "^1.0"
+        "zendframework/zend-servicemanager": "^3.0",
+        "psr/container": "^1.0"
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
     "require-dev": {
         "fzaninotto/faker": "^1.6",
-        "phpunit/phpunit": "^5.7",
-        "codeception/codeception": "^2.2"
+        "phpunit/phpunit": "^6.3",
+        "codeception/codeception": "^2.3"
     },
     "license": "MIT"
 }
