Fix codeception executable directory for travis-ci

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,4 +13,4 @@ cache:
     - vendor
     - $HOME/.composer/cache
 script:
-  - php codecept run cli,unit # self tests
+  - php vendor/bin/codecept run cli,unit # self tests
