--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,8 @@
     "require-dev": {
         "fzaninotto/faker": "^1.6",
         "phpunit/phpunit": "^6.3",
-        "codeception/codeception": "^2.3"
+        "codeception/codeception": "^2.3",
+        "phpstan/phpstan": "^0.10.3"
     },
     "license": "MIT"
 }
