--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,7 @@
         "fzaninotto/faker": "^1.6",
         "phpunit/phpunit": "^6.3",
         "codeception/codeception": "^2.3",
-        "phpstan/phpstan": "^0.10.3"
+        "phpstan/phpstan": "~0.9"
     },
     "license": "MIT"
 }
